; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_interpolation.c_filter_blackman.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_interpolation.c_filter_blackman.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_PI = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double)* @filter_blackman to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @filter_blackman(double %0) #0 {
  %2 = alloca double, align 8
  store double %0, double* %2, align 8
  %3 = load double, double* @M_PI, align 8
  %4 = load double, double* %2, align 8
  %5 = fmul double %3, %4
  %6 = call i64 @cos(double %5)
  %7 = sitofp i64 %6 to double
  %8 = fmul double 5.000000e-01, %7
  %9 = fadd double 0x3FDAE147A0000000, %8
  %10 = load double, double* @M_PI, align 8
  %11 = fmul double 2.000000e+00, %10
  %12 = load double, double* %2, align 8
  %13 = fmul double %11, %12
  %14 = call i64 @cos(double %13)
  %15 = sitofp i64 %14 to double
  %16 = fmul double 0x3FB47AE140000000, %15
  %17 = fadd double %9, %16
  ret double %17
}

declare dso_local i64 @cos(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
